--- a/index.html.j2
+++ b/index.html.j2
@@ -1,7 +1,7 @@
 <html>
-<header><title>{{ websiteheader }}</title></header>
+<header><title></title></header>
 <body>
-<h1>Welcome to {{ websiteheader }}</h1>
+<h1>Welcome to</h1>
 
 <h3>This site was created with Ansible by {{ websiteauthor }}
 
